--- a/app/components/stats/weapons.partial.html
+++ b/app/components/stats/weapons.partial.html
@@ -11,7 +11,7 @@
           </div>
           <div class="col-xs-2 stat">
             <span ng-bind="weapon.kills || 0"></span>
-            <label>Kills</label>
+            <label translate="kills"></label>
           </div>
           <div class="col-xs-2 stat">
             <span ng-bind="weapon.headshots || 0"></span>
