--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -66,6 +66,9 @@
 @import 'parts/player-maps';
 
 // TODO: Remove after april fools
+.is-failure {
+  color: $fail;
+}
 .april-fools {
   background: linear-gradient(to bottom, rgba(203,96,179,1) 0%,rgba(193,70,161,1) 50%,rgba(168,0,119,1) 51%,rgba(219,54,164,1) 100%);
   text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
@@ -75,6 +78,7 @@
   align-items: center;
   color: white;
   cursor: pointer;
+  font-size: .9em;
 
   &:hover {
     .april-fools__content {
@@ -114,6 +118,7 @@
 .april-fools__content {
   padding: 1em $controls-padding;
   flex-grow: 1;
+  white-space: nowrap;
 }
 
 $offset: 187;
