Revert "mark, don't look at this"
This reverts commit 1bf305dd20d64c44094b5163032d6c465b50d1e1.

--- a/app/components/controls/top.partial.html
+++ b/app/components/controls/top.partial.html
@@ -1,10 +1,5 @@
 <div class="header__content shadow-z-2">
-  <div class="title-bar">
-    <div class="banner-image one" ng-style="{'background-image':'url(' + DestinyCrucibleMapDefinition[284635225].pgcrImage + ')'}"></div>
-    <div class="banner-image two" ng-style="{'background-image':'url(' + DestinyCrucibleMapDefinition[2332037858].pgcrImage + ')'}"></div>
-    <div class="banner-image three" ng-style="{'background-image':'url(' + DestinyCrucibleMapDefinition[3292667877].pgcrImage + ')'}"></div>
-    <div class="banner-image four" ng-style="{'background-image':'url(' + DestinyCrucibleMapDefinition[4107311671].pgcrImage + ')'}"></div>
-    <div class="banner-image five" ng-style="{'background-image':'url(' + DestinyCrucibleMapDefinition[4260139097].pgcrImage + ')'}"></div>
+  <div class="title-bar" ng-style="{'background-image':'url(' + currentMap.pgcrImage + ')'}">
     <div class="title-bar__content">
       <div class="title-bar__title">
         <a href="/" target="_self">
