--- a/app/assets/css/parts/_title-bar.scss
+++ b/app/assets/css/parts/_title-bar.scss
@@ -2,6 +2,11 @@
   box-shadow: inset 0 -150px 50px -80px rgba(0, 0, 0, .75);
   background: center top no-repeat;
   background-size: auto 20em;
+
+  &.is-week-23 {
+    background-position-x: 0%;
+    background-size: auto 13.5em;
+  }
 }
 
 .title-bar__content {
