--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -1,7 +1,7 @@
 <div class="home__content">
   <article class="home__main">
     <div class="maps block blog-post shadow-z-1 {{mapInfoAnimClass}}">
-      <div class="modal-hero blog-image" ng-style="{'background-image': ($storage.currentMap.week == 23 ? 'url(\'/assets/img/maps/week23.png\')' : 'url(' + currentMap.pgcrImage + ')') }">
+      <div class="modal-hero blog-image" ng-style="{'background-image': ($storage.currentMap.week == 23 ? 'url(\'/assets/img/maps/week23.jpg\')' : 'url(' + currentMap.pgcrImage + ')') }">
         <div class="modal-hero__header">
           <h2 class="modal-hero__title" ng-bind="currentMapInfo.week == 23 ? 'Assorted Playlist' : currentMapInfo.name"></h2>
           <span class="map-cycle-popover"
