much better i18n for build stats

--- a/app/components/stats/cooldown.popover.html
+++ b/app/components/stats/cooldown.popover.html
@@ -14,7 +14,7 @@
     <div class="row" ng-if="!stat.tier">
       <div class="col-xs-12 stat">
         <span ng-bind="stat.percentage + '%'"></span>
-        <label translate="{{stat.name.toUpperCase()}}"></label>
+        <label translate="{{stat.name}}"></label>
       </div>
     </div>
   </div>
