Fixed the abysmal scroll performance in a modal

--- a/app/assets/css/elements/_modal.scss
+++ b/app/assets/css/elements/_modal.scss
@@ -1,11 +1,32 @@
-.modal-dialog {
-  margin: 0;
-  padding: 10px;
+.modal {
+  position: absolute;
+}
+
+.modal-wrapper {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 1em;
+  pointer-events: none;
 }
 
 .modal.center .modal-dialog {
-  top: 50%;
+  position: static;
+  transform: none;
   width: 100%;
+  pointer-events: auto;
+}
+
+.modal-content {
+  border-radius: 1em;
+  overflow: hidden;
+  position: relative;
+  background: #333;
+}
+
+.modal-dialog {
+  margin: 0;
 }
 
 .modal-hero {
@@ -80,15 +101,6 @@
 .modal-title {
   color: $trials-gold;
   font-weight: 500;
-}
-
-.modal-content {
-  border-radius: 2em;
-  overflow: hidden;
-  max-height: 90vh;
-  overflow-y: auto;
-  position: relative;
-    background: #333;
 }
 
 .modal-content .modal-footer {
