--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -123,6 +123,13 @@
             <span data-content="Due to the way Bungie provides information on lighthouse visits, this leaderboard is subject to change when the tension is high." bs-popover>
               <i class="material-icons icon--small info">&#xE8FD;</i>
             </span>
+            <div class="first-in-lighthouse__platform-toggle">
+              <span class="stat-header">Platform</span>
+              <a href class="is-active">Both</a>
+              <a href>Xbox</a>
+              <a href>PlayStation</a>
+            </div>
+
           </div>
           <div class="col-xs-12 col-sm-10" ng-if="!lighthouseLeaderboard">
             <div class="first-in-lighthouse__undecided">
