--- a/app/assets/css/main.scss
+++ b/app/assets/css/main.scss
@@ -38,6 +38,7 @@
 @import 'parts/top-weapons';
 @import 'parts/first-in-lighthouse';
 @import 'parts/settings';
+@import 'parts/charity';
 @import 'parts/kd-graph';
 
 // Player card
