--- a/app/assets/css/parts/_charity.scss
+++ b/app/assets/css/parts/_charity.scss
@@ -25,11 +25,12 @@
 	align-items: center;
 }
 
-.charity__logo {
-	flex-grow: 1;
+.charity__descr {
 	padding-right: 4em;
+	width: 200%;
 
 	img {
+		margin-bottom: 1em;
 		max-width: 100%;
 	}
 }
