Consistent Modal style for FAQ

--- a/app/components/home/aside.partial.html
+++ b/app/components/home/aside.partial.html
@@ -52,17 +52,9 @@
 	</section>
 	<hr>
 	<section class="more__section">
-		<!--<a
-			title="FAQ"
-			data-content-template="shared/modals/faq.modal.html"
-			bs-modal
-			analytics-on analytics-event="Click"
-			analytics-category="FAQ">
-			<span class="more__logo more__logo--small"><i class="material-icons icon--small">&#xE8B8;</i> SETTINGS</span>
-		</a>-->
 		<a
 			title="FAQ"
-			data-content-template="shared/modals/faq.modal.html"
+			data-template-url="shared/modals/faq.modal.html"
 			bs-modal
 			analytics-on analytics-event="Click"
 			analytics-category="FAQ">
