--- a/app/components/home/blog.partial.html
+++ b/app/components/home/blog.partial.html
@@ -126,8 +126,7 @@
           </div>
           <div class="col-xs-12 col-sm-10" ng-if="!lighthouseLeaderboard">
             <div class="first-in-lighthouse__undecided">
-              <!--The race is still on...-->
-              The Lighthouse is closed this week for renovations...
+              The race is still on...
             </div>
           </div>
           <div class="col-xs-12 col-sm-3 stat first-in-lighthouse__players" ng-if="lighthouseLeaderboard" ng-repeat="lb in lighthouseLeaderboard">
